# tiny-lang-compiler

./: CMakeLists.txt  README.md
data/: r-1  r-block  r-expr  r-fun  r-sample  r2  w-1  w-block  w-expr  w-fun  w-sample  w1  w2
include/error/: parse_error.h
include/lexer/: defs.h  lex_state.h  lexer.h  token.h
include/syntax/: parse_env.h  parser_combinator.h  syntax_analyze.h  syntax_analyze_input.h  syntax_defs.h  syntax_tree.h
include/util/: file_position.h  log.h  string.h  util.h  vector.h
src/: CMakeLists.txt  main.c
src/error/: parse_error.c  parse_error.h
src/lexer/: defs.c  defs.h  lex_state.c  lex_state.h  lexer.c  lexer.h  token.c  token.h
src/syntax/: parser_combinator.c  syntax_analyze.c  syntax_analyze_input.c  syntax_tree.c
src/util/: file_position.c  file_position.h  string.c  string.h  util.c  util.h  vector.h
test/: CMakeLists.txt  test_lexer.c  text_syntax_analyze.c
